--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
-  "compilerOptions": {
-    "target": "es2017", 
-    "experimentalDecorators": true,                   
-    "emitDecoratorMetadata": true,                    
-    "module": "Commonjs",                                
-    "rootDir": "./src",                                  
-    "outDir": "./dist",                                   
-    "removeComments": true,                           
-    "esModuleInterop": true,                             
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,
-    "resolveJsonModule": true,                                      
-    "skipLibCheck": true                                 
-  },
-  "exclude": ["node_modules","test","**/*.test.ts"]
+    "compilerOptions": {
+      "target": "ES2015", 
+      "experimentalDecorators": true, 
+      "emitDecoratorMetadata": true, 
+      "module": "CommonJS",
+      "rootDir": "./src", 
+      "outDir": "./dist", 
+      "removeComments": true, 
+      "esModuleInterop": true, 
+      "forceConsistentCasingInFileNames": true, 
+      "strict": true, 
+      "resolveJsonModule": true,
+      "skipLibCheck": true 
+    },
+  "include": ["src/**/*"]
 }
