--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
 {
-    "compilerOptions": {
-      "target": "ES2015", 
-      "experimentalDecorators": true, 
-      "emitDecoratorMetadata": true, 
-      "module": "CommonJS",
-      "rootDir": "./src", 
-      "outDir": "./dist", 
-      "removeComments": true, 
-      "esModuleInterop": true, 
-      "forceConsistentCasingInFileNames": true, 
-      "strict": true, 
-      "resolveJsonModule": true,
-      "skipLibCheck": true 
-    },
-  "include": ["src/**/*"]
+  "compilerOptions": {
+    "target": "es2015", 
+    "experimentalDecorators": true, 
+    "emitDecoratorMetadata": true, 
+    "module": "commonjs",
+    "rootDir": "./src", 
+    "outDir": "./dist", 
+    "removeComments": true, 
+    "esModuleInterop": true, 
+    "forceConsistentCasingInFileNames": true, 
+    "strict": true, 
+    "resolveJsonModule": true,
+    "skipLibCheck": true 
+  },
 }
