--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mosmmy/shortname-js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "shortname-js is a JavaScript function designed to shorten names in a simple and user-friendly way. The function allows users to quickly enter full names and receive abbreviated versions of those names in return",
   "displayName": "shortname-js",
   "main" : "dist/index.js",
@@ -8,7 +8,8 @@
   "files": ["src", "dist", "LICENSE", "README.md", "package.json"],
   "scripts": {
     "build": "tsc --declaration",
-    "dev":  "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify test/test.ts"
+    "test": "jest",
+    "prepare": "npm run build"
   },
   "keywords": [
     "shortname-js",
@@ -28,9 +29,9 @@
     "url": "https://github.com/moser-jose/shortname-js/issues"
   },
   "devDependencies": {
-    "@types/node": "^20.1.1",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   }
 }
