--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2015", 
-    "experimentalDecorators": true, 
-    "emitDecoratorMetadata": true, 
+    "target": "ES2020",  
     "module": "commonjs",
     "rootDir": "./src", 
     "outDir": "./dist", 
