--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "@mosmmy/shortname-js",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "shortname-js is a JavaScript function designed to shorten names in a simple and user-friendly way. The function allows users to quickly enter full names and receive abbreviated versions of those names in return",
   "displayName": "shortname-js",
-  "main" : "dist/index.js",
-  "types" : "dist/index.d.ts",
-  "files": ["src", "dist", "LICENSE", "README.md", "package.json"],
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "src",
+    "dist",
+    "LICENSE",
+    "README.md",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsc --declaration",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint 'src/**/*.{ts,js}'",
+    "lint:fix": "eslint 'src/**/*.{ts,js}' --fix",
+    "format": "prettier --write 'src/**/*.{ts,js}'"
   },
   "keywords": [
     "shortname-js",
@@ -28,8 +40,16 @@
     "url": "https://github.com/moser-jose/shortname-js/issues"
   },
   "devDependencies": {
+    "@eslint/js": "9.21.0",
     "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "8.26.0",
+    "@typescript-eslint/parser": "8.26.0",
+    "eslint": "9.21.0",
+    "eslint-config-prettier": "10.0.2",
+    "eslint-plugin-prettier": "5.2.3",
+    "globals": "16.0.0",
     "jest": "^29.7.0",
+    "prettier": "3.5.3",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
